force-app/main/default/objects/BusinessLicense/BusinessLicense.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>