force-app/main/default/objects/BusinessLicense/fields/ABS_Number__c.field-meta.xml
<CustomField>
    <fullName>ABS_Number__c</fullName>
    <displayFormat>ABS-{0000000000}</displayFormat>
    <label>ABS Number</label>
    <type>AutoNumber</type>
</CustomField>