force-app/main/default/objects/BusinessLicense/fields/Board_Approval__c.field-meta.xml
<CustomField>
    <fullName>Board_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Board Approval</label>
    <referenceTo>Board_Approval__c</referenceTo>
    <relationshipLabel>Licenses</relationshipLabel>
    <relationshipName>Licenses</relationshipName>
    <type>Lookup</type>
</CustomField>