force-app/main/default/objects/BusinessLicense/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Profit ABS</fullName>
            </value>
            <value>
                <fullName>Equity ABS</fullName>
            </value>
            <value>
                <fullName>Regular ABS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>