force-app/main/default/objects/BusinessLicense/fields/ContactEmail__c.field-meta.xml
<CustomField>
    <fullName>ContactEmail__c</fullName>
    <formula>Contact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContactEmail</label>
    <type>Text</type>
</CustomField>