force-app/main/default/objects/BusinessLicense/fields/Formatted_Certified_Date__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Certified_Date__c</fullName>
    <formula>CASE(MONTH(DATEVALUE(PeriodStart)),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;&quot;
)
&amp; &quot; &quot; &amp;
TEXT(DAY(DATEVALUE(PeriodStart))) &amp;
&quot;, &quot; &amp;
TEXT(YEAR(DATEVALUE(PeriodStart)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formatted Certified Date</label>
    <type>Text</type>
</CustomField>