force-app/main/default/objects/BusinessLicense/fields/GCE_Submit_Deadline__c.field-meta.xml
<CustomField>
    <fullName>GCE_Submit_Deadline__c</fullName>
    <label>GCE Submit Deadline</label>
    <type>Date</type>
</CustomField>