force-app/main/default/objects/BusinessLicense/fields/Good_Cause_Exception__c.field-meta.xml
<CustomField>
    <fullName>Good_Cause_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Good Cause Exception</label>
    <type>Checkbox</type>
</CustomField>