force-app/main/default/objects/BusinessLicense/fields/Good_Cause_Exception_Date__c.field-meta.xml
<CustomField>
    <fullName>Good_Cause_Exception_Date__c</fullName>
    <label>Good Cause Exception Date</label>
    <type>Date</type>
</CustomField>