force-app/main/default/objects/BusinessLicense/fields/Is_Renewal_Open__c.field-meta.xml
<CustomField>
    <fullName>Is_Renewal_Open__c</fullName>
    <formula>NOW() &gt;= ADDMONTHS(PeriodEnd,  - VALUE(RegulatoryAuthorizationType.Renewal_Open_Duration__c)) &amp;&amp; NOW() &lt;=  PeriodEnd</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Renewal Open</label>
    <type>Checkbox</type>
</CustomField>