force-app/main/default/objects/BusinessLicense/fields/Late_Fee_From__c.field-meta.xml
<CustomField>
    <fullName>Late_Fee_From__c</fullName>
    <formula>ADDMONTHS( DATE(
    YEAR( DATEVALUE(PeriodEnd) ), MONTH( DATEVALUE (PeriodEnd) ), 1
), (VALUE( RegulatoryAuthorizationType.Late_Fee_Duration__c ) - 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Late Fee From</label>
    <type>Date</type>
</CustomField>