force-app/main/default/objects/BusinessLicense/fields/License_Code__c.field-meta.xml
<CustomField>
    <fullName>License_Code__c</fullName>
    <formula>RegulatoryAuthorizationType.RegulatoryAuthCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Code</label>
    <type>Text</type>
</CustomField>