force-app/main/default/objects/BusinessLicense/fields/License_Info_QR__c.field-meta.xml
<CustomField>
    <fullName>License_Info_QR__c</fullName>
    <formula>IMAGE(
    &quot;http://api.qrserver.com/v1/create-qr-code/?size=75x75&amp;data=&quot; + $Label.Community_URL + License_Number__c,
    &quot;scan this&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Info QR</label>
    <type>Text</type>
</CustomField>