force-app/main/default/objects/BusinessLicense/fields/License_Name__c.field-meta.xml
<CustomField>
    <fullName>License_Name__c</fullName>
    <formula>RegulatoryAuthorizationType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Name</label>
    <type>Text</type>
</CustomField>