force-app/main/default/objects/BusinessLicense/fields/PeriodEndYear__c.field-meta.xml
<CustomField>
    <fullName>PeriodEndYear__c</fullName>
    <formula>TEXT(YEAR(DATEVALUE(PeriodEnd)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PeriodEndYear</label>
    <type>Text</type>
</CustomField>