force-app/main/default/objects/BusinessLicense/fields/PeriodStartYear__c.field-meta.xml
<CustomField>
    <fullName>PeriodStartYear__c</fullName>
    <formula>TEXT(YEAR(DATEVALUE(PeriodStart))  -  VALUE(RegulatoryAuthorizationType.ProcessingDuration))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PeriodStartYear</label>
    <type>Text</type>
</CustomField>