force-app/main/default/objects/BusinessLicense/fields/Renewal_From__c.field-meta.xml
<CustomField>
    <fullName>Renewal_From__c</fullName>
    <formula>ADDMONTHS( PeriodEnd , - VALUE(RegulatoryAuthorizationType.Renewal_Open_Duration__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal From</label>
    <type>Date</type>
</CustomField>