force-app/main/default/objects/BusinessLicense/fields/Type_of_License__c.field-meta.xml
<CustomField>
    <fullName>Type_of_License__c</fullName>
    <label>Type of License</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>