force-app/main/default/objects/BusinessLicense/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Name</columns>
    <columns>RegulatoryAuthorizationType</columns>
    <columns>Account</columns>
    <columns>Contact</columns>
    <columns>PeriodStart</columns>
    <columns>PeriodEnd</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>