force-app/main/default/objects/BusinessLicense/listViews/All_ABS_Licenses.listView-meta.xml
<ListView>
    <fullName>All_ABS_Licenses</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>PeriodStart</columns>
    <columns>PeriodEnd</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RegulatoryAuthorizationType</field>
        <operation>equals</operation>
        <value>Alternative Business Structure License</value>
    </filters>
    <label>All ABS Licenses</label>
</ListView>