force-app/main/default/objects/BusinessLicense/listViews/All_CR_Firm_Licenses.listView-meta.xml
<ListView>
    <fullName>All_CR_Firm_Licenses</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>PeriodStart</columns>
    <columns>PeriodEnd</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RegulatoryAuthorizationType</field>
        <operation>equals</operation>
        <value>Certified Reporter Registered Reporting Firm</value>
    </filters>
    <label>All CR Firm Licenses</label>
</ListView>