force-app/main/default/objects/BusinessLicense/listViews/All_LDP_Business_Licenses.listView-meta.xml
<ListView>
    <fullName>All_LDP_Business_Licenses</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>PeriodStart</columns>
    <columns>PeriodEnd</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RegulatoryAuthorizationType</field>
        <operation>equals</operation>
        <value>Legal Document Preparer Business</value>
    </filters>
    <label>All LDP Business Licenses</label>
</ListView>