force-app/main/default/objects/BusinessLicense/listViews/All_LDP_Individual_Licenses.listView-meta.xml
<ListView>
    <fullName>All_LDP_Individual_Licenses</fullName>
    <columns>Name</columns>
    <columns>Contact</columns>
    <columns>PeriodStart</columns>
    <columns>PeriodEnd</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RegulatoryAuthorizationType</field>
        <operation>equals</operation>
        <value>Legal Document Preparer Individual</value>
    </filters>
    <label>All LDP Individual Licenses</label>
</ListView>