force-app/main/default/objects/BusinessLicense/listViews/All_Legal_Paraprofessional_Licenses.listView-meta.xml
<ListView>
    <fullName>All_Legal_Paraprofessional_Licenses</fullName>
    <columns>Name</columns>
    <columns>Contact</columns>
    <columns>PeriodStart</columns>
    <columns>PeriodEnd</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RegulatoryAuthorizationType</field>
        <operation>equals</operation>
        <value>Legal Paraprofessional</value>
    </filters>
    <label>All Legal Paraprofessional Licenses</label>
</ListView>